--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ProjectoBaseComIdentity
 @using ProjectoBaseComIdentity.Models
+@using Microsoft.AspNetCore.Identity
+@addTagHelper ProjectoBaseComIdentity.CustomTagHelpers.*, ProjectoBaseComIdentity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
