Adicionando utilizadores concluido

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ProjectoBaseComIdentity
 @using ProjectoBaseComIdentity.Models
+@using ProjectoBaseComIdentity.Models.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper ProjectoBaseComIdentity.CustomTagHelpers.*, ProjectoBaseComIdentity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
